Make gcJvmOpts configurable on JavaServiceDistributionExtension